mem_feature, domain is added
