# controllers/membership_feature.controllers.js
@@ -7,25 +7,25 @@ const config = require('config');
 const create = async (req, res)=>{
     try {
         let rules = {  
+            meb_id:'required',
             domain:'required',
             title: 'required',
             image1: 'required',
-            price: 'required',
             orderno: 'required'
         }
 
         await validate(req.body, rules,[]);
+        let meb_id = req.body.meb_id;
         let domain = req.body.domain;
         let title = req.body.title;
         let description = req.body.description;
         let image1 = req.body.image1;
-        let price = req.body.price;
         let orderno = req.body.orderno;
       
 
         
-        let query = `INSERT INTO public.membership_tbl(domain, title, description, image1, price, orderno, creation_dt, updated_dt) 
-        VALUES ('${domain}','${title}','${description}','${image1}',${price},${orderno},now(),now())`;
+        let query = `INSERT INTO public.membership_feature_tbl(meb_id, domain, title, description, image1, orderno, created_by, creation_dt,updated_by ,updated_dt) 
+        VALUES (${meb_id},'${domain}','${title}','${description}','${image1}',${orderno},${meb_id},now(),${meb_id},now())`;
         
         let result =  await pool.executeQuery(query,[])
         return returnStatus(res, {}, 200, 'successfully created')
@@ -49,11 +49,11 @@ const getAll = async (req, res)=>{
         await validate(req.body, rules,[]);
         let limit = req.body.limit;
         let offset = req.body.offset;
-        let query = `select * from public.membership_tbl  order by creation_dt desc limit ${limit} offset ${offset}`;
-        let result =  await pool.executeQueryWithMsg(query,[],'No records available.')
-        query = `select count(meb_id) as cnt from public.membership_tbl where is_delete = false`;
-        let resultCount =  await pool.executeQuery(query,[])
 
+        let query = `select * from public.membership_feature_tbl  order by creation_dt desc limit ${limit} offset ${offset}`;
+        let result =  await pool.executeQueryWithMsg(query,[],'No records available.')
+        query = `select count(mf_id) as cnt from public.membership_feature_tbl where is_delete = false`;
+        let resultCount =  await pool.executeQuery(query,[])
         let data = {
             totalCount : parseInt(resultCount.rows[0]['cnt']),
             result : result
@@ -75,8 +75,8 @@ const getById = async (req, res)=>{
             id: 'required'
         }
         await validate(req.params, rules,[]);
-        let meb_id = req.params.id;
-        let query = `select * from public.membership_tbl where meb_id = ${meb_id}`;
+        let mf_id = req.params.id;
+        let query = `select * from public.membership_feature_tbl where mf_id = ${mf_id}`;
         let result =  await pool.executeQueryWithMsg(query,[],'No records available.')
         let data = result[0];
         return returnStatus(res, data, 200, 'success')
@@ -94,21 +94,20 @@ const updateById = async (req, res)=>{
     try {
         let rules = {
             id: 'required'
-
         }
-
         await validate(req.params, rules,[]);
-        let meb_id = req.params.id;
+        
+        let mf_id = req.params.id;
+        let meb_id = req.body.meb_id;
         let domain = req.body.domain;
         let title = req.body.title;
         let description = req.body.description;
         let image1 = req.body.image1;
-        let price = req.body.price;
         let orderno = req.body.orderno;
 
-        let query = `UPDATE public.membership_tbl
-        SET domain='${domain}' title ='${title}',description ='${description}',image1 ='${image1}',price =${price},orderno =${orderno},updated_by=${meb_id},updated_dt = now()
-        WHERE meb_id = ${meb_id}`;
+        let query = `UPDATE public.membership_feature_tbl
+        SET meb_id='${meb_id}' domain='${domain}' title ='${title}',description ='${description}',image1 =${image1}, orderno =${orderno},updated_by=${meb_id},updated_dt = now()
+        WHERE mf_id = ${mf_id}`;
 
         let result =  await pool.executeQuery(query,[])
         return returnStatus(res, {}, 200, 'successfully updated')
@@ -128,10 +127,10 @@ const deleteById = async (req, res)=>{
             id: 'required'
         }
         await validate(req.params, rules,[]);
-        let meb_id = req.params.id;
+        let mf_id = req.params.id;
         let query = `DELETE
-        from public.membership_tbl
-        where meb_id = ${meb_id}`;
+        from public.membership_feature_tbl
+        where mf_id = ${mf_id}`;
         await pool.executeQuery(query,[])
         return returnStatus(res, {}, 200, 'success')
     } catch (error) {
